# server/plugin/tencent_sms/api/sys_sms.go
@@ -3,8 +3,8 @@ package api
 import (
 	"github.com/defeng-hub/ByOfficeAutomatic/server/global"
 	"github.com/defeng-hub/ByOfficeAutomatic/server/model/common/response"
-	"github.com/defeng-hub/ByOfficeAutomatic/server/plugin/sms/tencent_sms/model"
-	"github.com/defeng-hub/ByOfficeAutomatic/server/plugin/sms/tencent_sms/service"
+	"github.com/defeng-hub/ByOfficeAutomatic/server/plugin/tencent_sms/model"
+	"github.com/defeng-hub/ByOfficeAutomatic/server/plugin/tencent_sms/service"
 
 	"github.com/gin-gonic/gin"
 	"go.uber.org/zap"
@@ -18,7 +18,7 @@ type TencentSmsApi struct{}
 // @Security ApiKeyAuth
 // @Produce  application/json
 // @Success 200 {string} string "{"success":true,"data":{},"msg":"发送成功"}"
-// @Router /tencentSms/sendTencentSms[post]
+// @Router /tencentSms/sendTencentSms [post]
 func (s *TencentSmsApi) SendTencentSms(c *gin.Context) {
 	var req model.TencentModel
 	_ = c.ShouldBindJSON(&req)
